# rust-gbif

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: search_occurrences.rs
specs/: checklistbank.json  occurrence.json
src/: lib.rs
